# ros_3d_pointing_detection

./: .gitignore  CMakeLists.txt  README.md  calc_3d_dist.py  detect_and_draw_joints.py  package.xml  yolo_subscriber.py
config/: publish_test_rgbd_data_config.yaml  rviz_color_depth_pcl.rviz
doc/video_demo/: video2gif.sh
include/: calc_3d_dist.py  detect_and_draw_joints.py  yolo_subscriber.py
launch/: darknet_ros.launch  publish_test_rgbd_data.launch  run_realsense.launch  run_rviz.launch
scripts/: select_data_for_unittest.py
